Add more on Eliza

--- a/introduction.tex
+++ b/introduction.tex
@@ -11,15 +11,17 @@ His translation was first published in 1930 by the Shanghai Beixin Shuju publish
 
 All Chinese terms mentioned in this thesis are listed in Traditional Chinese characters, together with the \textit{Hanyu Pinyin} romanization (漢語拼音 \pinyin{Hànyǔ Pīnyīn}) with tone marks. Of those, the romanizations of common words are set in italic type, while proper names are set in regular font. Russian terms are rendered in original Cyryllic script together with their transliteration according to the BGN/PCGN romanization system for Russian.
 
-\section{The life and times of Eliza Orzeszkowa}
+\section{Historical background of the novel}
 
 In order to fully understand the works of Eliza Orzeszkowa, it is important to put her writings in their historical context.
 Poland did not exist as a sovereign state after 1795, when the remaining territory of the Polish-Lithuanian Commonwealth was annexed by the Russian Empire, the  Kingdom of Prussia, and the Austro-Hungarian Empire.
 After the partitions, the ruling forces exercised policies aiming to uproot any expression of Polish patriotism and nationalism. These policies were particularly strict in the Russian and Prussian partitions.
 For 123 years, between 1795 and 1918, the Polish people's struggle for independence constituted an important topic in Polish-language literature.
-It was particularly important in the works of Positivist writers, 
+It was particularly important in the works of Positivist writers, who believed that the key to independence was education and hard work, rather than uprisings and revolutions. (TODO: source?)
 
 Gloger (2007) states that in the case of Poland, Positivism played a similar role to that of Enlightenment in Western Europe, that is to say, it paved ground for the development of modernism and modernity, popularizing rationalism and the scientific approach to reality. The cultural impact of Enlightenment in Poland was rather limited due to the overall civilizational lag and unfavorable historical circumstances.
+
+\section{The life and times of Eliza Orzeszkowa}
 
 Eliza Orzeszkowa was born Eliza Pawłowska on June 6th, 1841, in the village of Milkowszczyzna in present-day Belarus, to a family of gentry. Her father, Benedykt Pawłowski, died when she was three years old. 
 At the age of ten, she moved to Warsaw, the present-day capital of Poland, where for the following five years she attended a boarding school run by the nuns of the Order of the Holy Sacrament.
@@ -50,11 +52,8 @@ Zamenhof was born in the city of Białystok, Congress Poland, Russian Empire (pr
 Having been raised as an idealist, in the belief that all men were brothers, he had noticed the discrepancy between his ideals and the discriminative, exclusive attitudes of the peoples inhabiting his home town.
 Ever since his early childhood, he had a vision of a single language that could unite all nations (Zamenhof 1904).
 
-The language he authored was first described in the Russian language, in a book published in 1887 in Warsaw, called in the English edition \textit{Dr. Esperanto's International Language, Introduction and Complete Grammar} (Pre-reform Russian: Между\-на\-род\-ный Языкъ. Предисловие и полный учебникъ. \textit{Mezhdunarodnyi Yazyk. Predislovie i polnyi uchebnik.} `The International Language. Introduction and Complete Textbook').
+The language he authored was first described in a book published in the Russian language in 1887 in Warsaw. The title of the English edition was \textit{Dr. Esperanto's International Language, Introduction and Complete Grammar} (Pre-reform Russian: Между\-на\-род\-ный Языкъ. Предисловие и полный учебникъ. \textit{Mezhdunarodnyy Yazyk. Predisloviye i polnyy uchebnik.} `The International Language. Introduction and Complete Textbook').
 The book contained a basic course of Zamenhof's constructed language together with a dictionary and is commonly referred to as \textit{The First Book} (Esperanto: \textit{Unua Libro}).
-At the time, the language had no name of its own other than the titular ``international language'' (Esperanto: \textit{lingvo internacia}).
-Esperanto
-
 In the book, Zamenhof postulated the need for an international auxilliary language that could connect people from different cultural and language backgrounds.
 He argued that if the humanity had to only learn two languages, their own native language and the proposed bridge language, they would be able to communicate with each other with more ease, enriching all languages and allowing for a better command of one's own native language (Zamenhof 2006).
 
@@ -67,6 +66,10 @@ Their failure, Zamenhof argued, had been due to their failure to meet three cruc
   \item designating the language as a means of international communication rather than a ``universal'' language, and enabling the learner to make direct use of his knowledge of the language with persons of any nationality,
   \item convincing indifferent people around the world to learn the proposed international language (Zamenhof 2006).
 \end{enumerate}
+
+At the time, the language had no name of its own other than the titular ``international language'' (Esperanto: \textit{lingvo internacia}).
+The speakers of the new language soon decided to baptize the language with a part of Zamenhof's pseudonym, \textit{Doktoro Esperanto}.
+In the constructed language, \textit{Esperanto} signified `the one who hopes.' The suffix \textit{-anto} indicates the gerund form, analogous to such Latin words as \textit{memorandum} or the ``verb + \textit{-ing}'' form in English.
 
 Nowadays, Esperanto is often thought of merely as a Quixotic experiment.
 It has never quite succeeded in becoming a commonly accepted lingua franca, nor could it possibly put an end to all wars---the turbulent history of the 20th century proves otherwise.
