More on Eliza Orzeszkowa

--- a/introduction.tex
+++ b/introduction.tex
@@ -2,34 +2,54 @@
 \defspacing
 
 The purpose of this thesis is to discuss the 1873 novel \textit{Marta}, written by the Polish writer Eliza Orzeszkowa (1841-1910), as well as its translations into Esperanto and the indirect translation from Esperanto into Traditional Chinese.
-The novel was first published in Polish in 1873, in Esperanto in 1810, and in Traditional Chinese in 1948.
+The goal of the research is to find the similarities and differences between all three versions, analyze the translation techniques used by the two translators, and determine whether any content has been distorted in the process of indirect translation from Esperanto into Chinese.
+
+The novel \textit{Marta} was first published in Polish in 1873, in Esperanto in 1910, and in Traditional Chinese in 1948.
+Ludwik Zamenhof, the creator of Esperanto, being fluent in Polish, translated the novel from the Polish original.
 The Chinese version was translated in May 1928 by Mr. Zhong Xianmin (錘憲民 \nazwisko{Zhōng Xiànmín}) from the Esperanto edition.
 His translation was first published in 1930 by the Shanghai Beixin Shuju publishing house (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú})
 (Kökény and Bleier 1933: 612; Orzeszko 1948).
 
 \section{A note on transcriptions and transliterations}
 
-All Chinese terms mentioned in this thesis are listed in Traditional Chinese characters, together with the \textit{Hanyu Pinyin} romanization (漢語拼音 \pinyin{Hànyǔ Pīnyīn}) with tone marks. Of those, the romanizations of common words are set in italic type, while proper names are set in regular font. Russian terms are rendered in original Cyryllic script together with their transliteration according to the BGN/PCGN romanization system for Russian.
+All Chinese terms mentioned in this thesis are listed in Traditional Chinese characters, together with the \textit{Hanyu Pinyin} romanization (漢語拼音 \pinyin{Hànyǔ Pīnyīn}) with tone marks.
+The romanizations of common terms are set in italic type, while proper names are set in regular font.
+Russian terms are rendered in original Cyryllic script together with their transliteration according to the BGN/PCGN romanization system for Russian.
 
 \section{Historical background of the novel}
 
 In order to fully understand the works of Eliza Orzeszkowa, it is important to put her writings in their historical context.
 Poland did not exist as a sovereign state after 1795, when the remaining territory of the Polish-Lithuanian Commonwealth was annexed by the Russian Empire, the  Kingdom of Prussia, and the Austro-Hungarian Empire.
 After the partitions, the ruling forces exercised policies aiming to uproot any expression of Polish patriotism and nationalism. These policies were particularly strict in the Russian and Prussian partitions.
+
 For 123 years, between 1795 and 1918, the Polish people's struggle for independence constituted an important topic in Polish-language literature.
-It was particularly important in the works of Positivist writers, who believed that the key to independence was education and hard work, rather than uprisings and revolutions. (TODO: source?)
+After the failure of the 1863 January Uprising against the Russian Empire, the Polish people were disappointed with Romanticism and slogans of armed fight for independence.
+The fallen uprising was an important milestone in the development of socialism.
+It was in honor of the fallen uprising that a worker gathering was held in 1864, attended by Marx himself, resulting in the founding of the International Workingmen's Association, also known as the ``First International.''
+
+The end of the January uprising is considered to be the beginning of a literary genre known as the ``Warsaw Positivism'' (French: \textit{positivisme varsovien}).
+% It was particularly important in the works of Positivist writers, who believed that the key to independence was education and hard work, rather than uprisings and revolutions.
+The key topics in Polish Positivist literature included the fight for independence, the emancipation of serfs and women, promoting science, medicine and public hygiene, and the assimilation of Jews into the Polish society.
+(TODO: source?)
 
 Gloger (2007) states that in the case of Poland, Positivism played a similar role to that of Enlightenment in Western Europe, that is to say, it paved ground for the development of modernism and modernity, popularizing rationalism and the scientific approach to reality. The cultural impact of Enlightenment in Poland was rather limited due to the overall civilizational lag and unfavorable historical circumstances.
 
 \section{The life and times of Eliza Orzeszkowa}
 
 Eliza Orzeszkowa was born Eliza Pawłowska on June 6th, 1841, in the village of Milkowszczyzna in present-day Belarus, to a family of gentry. Her father, Benedykt Pawłowski, died when she was three years old. 
-At the age of ten, she moved to Warsaw, the present-day capital of Poland, where for the following five years she attended a boarding school run by the nuns of the Order of the Holy Sacrament.
-In 1858, at the age of 17, she married Piotr Orzeszko, a landowner.
-The marriage of Mr. and Mrs. Orzeszko proved unsuccessful, mainly due to Eliza's political interests---Eliza was highly pro-independence and sought the independence of serfs (Britannica, Bachórz).
+At the age of ten, she moved to Warsaw, the present-day capital of Poland, where for the following five years she attended a boarding school run by the nuns of the Order of the Holy Sacrament, where she learned French and German, and explored Polish literature.
+In 1858, at the age of 17, her parents arranged her marriage with Piotr Orzeszko, a wealthy landowner.
+At the day of their wedding, the bridegroom was 35 years old.
+The marriage of Mr. and Mrs. Orzeszko proved unsuccessful, mainly due to Eliza's political interests---Eliza was highly pro-independence and sought the emancipation of serfs (Britannica, Bachórz, Brykowisko 2011).
+
+During the January Uprising, Eliza was actively working for the Polish cause, passing messages between the troops, and even helping Mr. Romuald Traugutt, the leader of the insurrection from October 1863 up to its end in August 1864, by hiding him in her house and escorting him to the border of Congress Poland.
+In December 1864, Mr. Orzeszko was arrested and sent to Russia.
+(Brykowisko 2011).
+
+In 1866, Eliza settled in Grodno. In 1869, her marriage was annulled.
 
 \section{Names of Eliza Orzeszkowa}
-% 孀婦 shuang1fu4
+
 In many Slavic languages, including Polish, many family names have traditionally taken a different form when referring to a man, his unmarried daughter, and his wife.
 For instance, the wife of the well-known Polish poet of the Romanticist period, Adam Mickiewicz, was referred to as Celina Mickiewiczowa, and his eldest daughter would be referred to as Maria Mickiewiczówna, up until her marriage.
 Analogously, in case of the name ``Eliza Orzeszkowa,'' Orzeszkowa means `the wife of Mr. Orzeszko,' which roughly corresponds to the English form ``Mrs. Piotr Orzeszko.''
@@ -84,7 +104,7 @@ Nevertheless, in an interview with Jason Zesky (2009), she acknowledged the ease
 \longquote{At the Esperanto conference I attended, more than I expected. I thought it would be a lot of play acting, like [in a singsong voice], “Hello. How are you? I am fine.” But they were speaking fluently, and with a little bit of study I could understand what was going on. There was also a lot of Victorian rigmarole because Esperanto was a turn of the [20th] century phenomenon they have retained all these old rituals. They have a flag passing ceremony and the reading of greetings from various Esperanto clubs—even a show and piano recitals.}
 
 \section{The content of the novel}
-\textit{Marta} tells the story of Marta {nazwisko}.
+\textit{Marta} tells the story of Marta Swicka.
 In the beginning of the narrative, Marta is presented as a relatively affluent lady whose husband had just died, leaving her with a little daughter. % has?
 Due to these unfavorable circumstances, she is compelled to move out of the lavish apartment in Warsaw that she and her family had inhabited.
 
