--- a/references.tex
+++ b/references.tex
@@ -2,6 +2,8 @@
 \addcontentsline{toc}{chapter}{References}
 \markboth{References}{References}
 
+Brykowisko. (2011). \textit{Eliza Orzeszkowa. Słownik pisarzy polskich.} Retrieved March, 16th, 2020, from \url{https://www.bryk.pl/slowniki/slownik-pisarzy/85210-orzeszkowa-eliza-1841-1910}.
+
 Bachórz J. \textit{Eliza Orzeszkowa}. Virtual Library of Polish Literature. Retrieved March 7th, 2020, from \url{https://literat.ug.edu.pl/autors/orzeszk.htm}.
 
 Kökény L. and Bleier V. (1933). \textit{Enciklopedio de Esperanto}. Retrieved March 7th, 2020, from \url{http://www.eventoj.hu/steb/gxenerala_naturscienco/enciklopedio-1/enciklopedio-de-esperanto-1933.pdf}.
@@ -13,6 +15,8 @@ The Editors of Encyclopaedia Britannica. (2019). \textit{Eliza Orzeszkowa}. In \
 Gloger M. (2007). \textit{Pozytywizm: między nowoczesnością a modernizmem} [Positivism: Between Modernity and Modernism]. \textit{Pamiętnik Literacki. Czasopismo kwartalne poświęcone historii i krytyce literatury polskiej}, 2007(1). Retrieved March 7th, 2020, from \url{https://www.ceeol.com/search/article-detail?id=200994}.
 
 Lai Tzu-Yun 賴慈芸. (2015). \textit{Lai Ciyun zhuanlan: Ye shi renjian beiju? Xunzhao yizhe Zhong Xianmin shimo} 賴慈芸專欄：也是人間悲劇？尋找譯者鍾憲民始末 [Lai Tzu-Yun's Column: A Human Tragedy? The Search for the Translator Zhong Xianmin]. Retrieved March 7th, 2020, from \url{https://www.storm.mg/lifestyle/76287}.
+
+Miłosz, C. (1993). \textit{Historia literatury polskiej: Do roku 1939}. Kraków: ZNAK. 
 
 Okrent A. (2009, July 21). \textit{Discouraging Words: Invented languages and their long history of failure.} Interview with Jason Zasky. Retrieved March 9th, 2020, from \url{http://failuremag.com/article/discouraging-words}.
 
