--- a/titlepage.tex
+++ b/titlepage.tex
@@ -17,9 +17,9 @@
     \vspace{1em}
     {\huge\textbf{\@title}\par}
     \vspace{2cm plus 1.5fill}
-    {\large 指導老師：某某某博士}\par
+    {\large 指導老師：賴慈芸博士}\par
     \vspace{0.5em}
-    {\large Advisor: Dr. John Doe}\par
+    {\large Advisor: Dr. Lai Tzu-yun}\par
     \vspace{2cm}
     {\large 中華民國一〇九年三月}\par
     \vspace{0.5em}
