Add more on Esperanto

--- a/_preamble.tex
+++ b/_preamble.tex
@@ -8,7 +8,8 @@
 \hypersetup{
   colorlinks = true,
   linkbordercolor = {white},
-  urlcolor = DarkBlue
+  urlcolor = DarkBlue,
+  linkcolor = black
 }
 \usepackage{csquotes}
 \usepackage[top=2.5cm,left=3.5cm,right=2.5cm,bottom=2.5cm]{geometry}
