--- a/introduction.tex
+++ b/introduction.tex
@@ -73,13 +73,12 @@ Having been raised as an idealist, in the belief that all men were brothers, he 
 Ever since his early childhood, he had a vision of a single language that could unite all nations (Zamenhof 1904).
 
 The language he authored was first described in a book published in the Russian language in 1887 in Warsaw. The title of the English edition was \textit{Dr. Esperanto's International Language, Introduction and Complete Grammar} (Pre-reform Russian: Между\-на\-род\-ный Языкъ. Предисловие и полный учебникъ. \textit{Mezhdunarodnyy Yazyk. Predisloviye i polnyy uchebnik.} `The International Language. Introduction and Complete Textbook').
-The book contained a basic course of Zamenhof's constructed language together with a dictionary and is commonly referred to as \textit{The First Book} (Esperanto: \textit{Unua Libro}).
+The book contained a basic course of Zamenhof's constructed language together with a brief dictionary and is commonly referred to as \textit{The First Book} (Esperanto: \textit{Unua Libro}).
 In the book, Zamenhof postulated the need for an international auxilliary language that could connect people from different cultural and language backgrounds.
 He argued that if the humanity had to only learn two languages, their own native language and the proposed bridge language, they would be able to communicate with each other with more ease, enriching all languages and allowing for a better command of one's own native language (Zamenhof 2006).
 
 Similar endeavors had been undertaken before, with the most prominent example being Volapük, designed by a Catholic priest from Germany by the name Johann Martin Schleyer, however none of them had gained any significant international attention, nor had succeeded in becoming a generally accepted \textit{lingua franca}.
 Their failure, Zamenhof argued, had been due to their failure to meet three crucial conditions:
-% For a constructed language to become successful, Zamenhof suggested three key conditions that ought to be met. These conditions were:
 
 \begin{enumerate}
   \item that the language be easy to learn, so as to make its acquisition a ``mere play to the learner,''
@@ -87,9 +86,21 @@ Their failure, Zamenhof argued, had been due to their failure to meet three cruc
   \item convincing indifferent people around the world to learn the proposed international language (Zamenhof 2006).
 \end{enumerate}
 
-At the time, the language had no name of its own other than the titular ``international language'' (Esperanto: \textit{lingvo internacia}).
+Schleyer made all efforts to make his language as comprehensive and precise as possible, making his Volapük language entirely his invention.
+The vocabulary of Volapük was based mostly on English, with some influences of German and French.
+Most of the vocabulary deviated so much from the original language that it was beyond easy recognition by speakers of the respective source languages.
+Thus, the language was difficult to understand for anyone without prior training, while obfuscating the European origin of the language and making the language equally easy---or equally hard---to non-Europeans.
+By contrast, Zamenhof's approach to language design was brilliantly simple: the first book included only 16 grammar rules, which have been left intact ever since, and a vocabulary of just 917 stems.
+His vocabulary of Esperanto was mostly based on Latin and Western European languages, mainly French and German.
+Zamenhof avoided adding too detailed explanations in the belief that the language would eventually develop on its own
+(Kökény and Bleier 1933: 1053-1054).
+
+In the early stages of the development of Esperanto, the language had no name of its own other than the titular ``international language'' (Esperanto: \textit{lingvo internacia}).
 The speakers of the new language soon decided to baptize the language with a part of Zamenhof's pseudonym, \textit{Doktoro Esperanto}.
 In the constructed language, \textit{Esperanto} signified `the one who hopes.' The suffix \textit{-anto} indicates the gerund form, analogous to such Latin words as \textit{memorandum} or the ``verb + \textit{-ing}'' form in English.
+After a period of natural development of the language, in 1905, Zamenhof compiled another work called \textit{Fundamento de Esperanto} (English: \textit{Foundation of Esperanto}), in which he included a more detailed grammar, exercises, and an extended set of vocabulary, in five national languages: French, English, German, Russian, and Polish.
+This book was designated as the only obligatory authority over the language
+(Kökény and Bleier 1933: 1053-1054).
 
 Nowadays, Esperanto is often thought of merely as a Quixotic experiment.
 It has never quite succeeded in becoming a commonly accepted lingua franca, nor could it possibly put an end to all wars---the turbulent history of the 20th century proves otherwise.
