Add more on Zamenhof

--- a/introduction.tex
+++ b/introduction.tex
@@ -2,19 +2,16 @@
 \defspacing
 
 The purpose of this thesis is to discuss the 1873 novel \textit{Marta}, written by the Polish writer Eliza Orzeszkowa (1841-1910), as well as its translations into Esperanto and the indirect translation from Esperanto into Traditional Chinese.
-The goal of the research is to find the similarities and differences between all three versions, analyze the translation techniques used by the two translators, and determine whether any content has been distorted in the process of indirect translation from Esperanto into Chinese.
+The goal of the research is to find the similarities and differences between all three versions, analyze the translation techniques used by the two translators.
+Through this process, it should be possible to determine whether any content has been distorted in the process of indirect translation from Esperanto into Chinese, and conversely, if Esperanto can reliably be used as an intermediate language.
 
 The novel \textit{Marta} was first published in Polish in 1873, in Esperanto in 1910, and in Traditional Chinese in 1948.
 Ludwik Zamenhof, the creator of Esperanto, being fluent in Polish, translated the novel from the Polish original.
-The Chinese version was translated in May 1928 by Mr. Zhong Xianmin (錘憲民 \nazwisko{Zhōng Xiànmín}) from the Esperanto edition.
+The Chinese version was translated in May 1928 by Mr. Zhong Xianmin (錘憲民 \nazwisko{Zhōng Xiànmín}%
+\footnote{All Chinese terms mentioned in this thesis are listed in Traditional Chinese characters, together with the \textit{Hanyu Pinyin} romanization (漢語拼音 \pinyin{Hànyǔ Pīnyīn}) with tone marks. The romanizations of common terms are set in italic type, while proper names are set in regular font.}) %
+from the Esperanto edition.
 His translation was first published in 1930 by the Shanghai Beixin Shuju publishing house (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú})
 (Kökény and Bleier 1933: 612; Orzeszko 1948).
-
-\section{A note on transcriptions and transliterations}
-
-All Chinese terms mentioned in this thesis are listed in Traditional Chinese characters, together with the \textit{Hanyu Pinyin} romanization (漢語拼音 \pinyin{Hànyǔ Pīnyīn}) with tone marks.
-The romanizations of common terms are set in italic type, while proper names are set in regular font.
-Russian terms are rendered in original Cyryllic script together with their transliteration according to the BGN/PCGN romanization system for Russian.
 
 \section{Historical background of the novel}
 
@@ -72,7 +69,20 @@ Zamenhof was born in the city of Białystok, Congress Poland, Russian Empire (pr
 Having been raised as an idealist, in the belief that all men were brothers, he had noticed the discrepancy between his ideals and the discriminative, exclusive attitudes of the peoples inhabiting his home town.
 Ever since his early childhood, he had a vision of a single language that could unite all nations (Zamenhof 1904).
 
-The language he authored was first described in a book published in the Russian language in 1887 in Warsaw. The title of the English edition was \textit{Dr. Esperanto's International Language, Introduction and Complete Grammar} (Pre-reform Russian: Между\-на\-род\-ный Языкъ. Предисловие и полный учебникъ. \textit{Mezhdunarodnyy Yazyk. Predisloviye i polnyy uchebnik.} `The International Language. Introduction and Complete Textbook').
+The father and grandfather of Ludwik Zamenhof had been language teachers, and Ludwik himself had a deep interest for languages since early childhood, dreaming of becoming a great Russian poet.
+At the age of ten, he wrote a five-act tragedy.
+Between 1870 he enrolled at a gymnasium in Białystok, which he attended for nine years.
+In 1873, he moved with his parents to Warsaw, where he studied Latin and Ancient Greek, and then enrolled at the Philological Gymnasium (a high school with a particular emphasis on the study of languages).
+He graduated in 1879 and moved to Moscow to attend the faculty of medicine.
+In 1881, due to the poor financial situation of his family, he was compelled to move back to Warsaw, where he obtained his medical degree in 1885.
+After a period of medical practice he realized that he was too sympathetic for his patients, that their suffering and death affected him too much.
+This was the reason he became a specialist in ophthalmology
+(Kökény and Bleier 1933: 1048).
+
+The language he authored was first described in a book published in the Russian language in 1887 in Warsaw. The title of the English edition was \textit{Dr. Esperanto's International Language, Introduction and Complete Grammar} (Pre-reform Russian: Между\-на\-род\-ный Языкъ. Предисловие и полный учебникъ. \textit{Mezhdunarodnyy Yazyk. Predisloviye i polnyy uchebnik.}%
+\footnote{All Russian terms in the thesis are rendered in original Cyryllic script together with their transliteration according to the BGN/PCGN romanization system for Russian.
+}
+`The International Language. Introduction and Complete Textbook').
 The book contained a basic course of Zamenhof's constructed language together with a brief dictionary and is commonly referred to as \textit{The First Book} (Esperanto: \textit{Unua Libro}).
 In the book, Zamenhof postulated the need for an international auxilliary language that could connect people from different cultural and language backgrounds.
 He argued that if the humanity had to only learn two languages, their own native language and the proposed bridge language, they would be able to communicate with each other with more ease, enriching all languages and allowing for a better command of one's own native language (Zamenhof 2006).
