--- a/_preamble.tex
+++ b/_preamble.tex
@@ -14,7 +14,7 @@
 \usepackage{csquotes}
 \usepackage[top=2.5cm,left=3.5cm,right=2.5cm,bottom=2.5cm]{geometry}
 \setmainfont[Mapping=tex-text]{Minion Pro}
-\setsansfont[Scale=0.88]{Helvetica}
+\setsansfont[Scale=0.88]{Minion Pro}
 \setCJKmainfont[Scale=0.89]{Source Han Serif TC}
 \setCJKsansfont{Source Han Sans TW}
 \setCJKmonofont{Source Han Sans TW}
