--- a/references.tex
+++ b/references.tex
@@ -29,6 +29,8 @@ Orzeszko E. (1910). \textit{Marta}. L.L. Zamenhof (Trans.). Retrieved from \url{
 
 Sevänen E. (2018). Modern Literature as a Form of Discourse and Knowledge of Society. \textit{Sociologias}, 20(48). doi:10.1590/15174522-020004803. Retrieved on March 7th, 2020.
 
+Universala Esperanto-Asocio. (2019). \textit{Rezolucio de la 104-a Universala Kongreso de Esperanto} [Resolution of the 104th World Esperanto Congress]. Retrieved March 23th, 2020, from \url{https://uea.org/aktuale/komunikoj/2019/Rezolucio-de-la-104-a-Universala-Kongreso-de-Esperanto}.
+
 Zamenhof L. L. (1904). \textit{The Birth of Esperanto}. Ellis J. (Trans.). Private letter with unknown recipient.
 
 Zamenhof L. L. (2006). \textit{Dr. Esperanto's International Language}. Geoghegan, R. H. (Trans.). Berwick, Nova Scotia, Canada. Retrieved March 9th, 2020, from \url{https://en.wikisource.org/wiki/Dr._Esperanto\%27s_International_Language}.
