Add expected outcome

--- a/references.tex
+++ b/references.tex
@@ -20,6 +20,8 @@ Miłosz, C. (1993). \textit{Historia literatury polskiej: Do roku 1939}. Kraków
 
 Okrent A. (2009, July 21). \textit{Discouraging Words: Invented languages and their long history of failure.} Interview with Jason Zasky. Retrieved March 9th, 2020, from \url{http://failuremag.com/article/discouraging-words}.
 
+Mair V. H. (1991). What Is a Chinese Dialect/Topolect? Reflections on Some Key Sino-English Linguistic Terms. \textit{Sino-Platonic Papers}, 29. Retrieved on March 23th, 2020, from \url{http://sino-platonic.org/complete/spp029_chinese_dialect.pdf}.
+
 Orzeszko E. (1948). \textit{Gū yàn lèi} 孤雁淚 [Marta]. Zhong Xianmin 鍾憲民 (Trans.). Shanghai, China: Guoji Wenhua Fuwushe.
 
 Orzeszkowa E. \textit{Marta}. Retrieved from \url{https://wolnelektury.pl/media/book/pdf/orzeszkowa-marta.pdf} on March 7th, 2020.
