--- a/introduction.tex
+++ b/introduction.tex
@@ -1,7 +1,7 @@
 \chapter{Introduction}
 \defspacing
 
-\section{Research topic}
+\section{Research topic and objective}
 The purpose of this thesis is to discuss the 1873 novel \textit{Marta}, written by the Polish writer Eliza Orzeszkowa (1841-1910), as well as its translations into Esperanto and the indirect translation from Esperanto into Traditional Chinese.
 The goal of the research is to find the similarities and differences between all three versions, analyze the translation techniques used by the two translators.
 Through this process, it should be possible to determine whether any content has been distorted in the process of indirect translation from Esperanto into Chinese, and conversely, if Esperanto can reliably be used as an intermediate language.
@@ -14,8 +14,34 @@ from the Esperanto edition.
 His translation was first published in 1930 by the Shanghai Beixin Shuju publishing house (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú})
 (Kökény and Bleier 1933: 612; Orzeszko 1948).
 
+Being himself a proponent of the Esperanto movement, the author hopes to prove the usefulness of Zamenhof's constructed language in the field of translation, and by extension promote the study and use of the language.
+
 \section{Research method and expected outcome}
-A comparative analysis of a single text translated into 
+A comparative analysis of a single text translated into both Esperanto and through Esperanto into Chinese could determine whether Esperanto can reliably be used as an intermediate language for the translation of literary texts.
+
+The author deems it safe to assume that the translator of the Esperanto edition, Ludwik Lejzer Zamenhof, possessed all means of creating a complete and faithful translation: having grown up in an area where Polish was the language of intelligentsia, he had a good command of the Polish language and a good understanding of the Polish culture.
+He also knew the author of the novel in person and had lived in the area where the plot of the novel was placed.
+Being the creator of the Esperanto language, he knew the language better than anyone else at his time.
+At the same time, Esperanto is a simple and highly flexible language, with grammar and logic based on European languages, including Polish and the grammatically similar Russian, making it relatively easy to translate the Polish original into Esperanto with little to no loss of meaning and high degrees of equivalence.
+
+On the other hand, Chinese, especially in its written variant (書面語 \pinyin{shūmiànyǔ} `book language'), relies on entirely different patterns than European languages.
+This has to do with the history and development of the Chinese language.
+Up till the 20th century, Chinese was a diglossic language.
+No legal standard of the spoken language existed and numerous spoken varieties were spoken throughout China.
+Those local varieties are referred to in Chinese as \textit{fangyan} (方言 \pinyin{fāngyán} `local language'), a word commonly rendered in English as ``dialect.''
+By Western linguistic standards, these varieties of the language could not be considered dialects of a single language, being to a large extent mutually unintelligible.
+Mair (1991) proposed the adoption of the term ``topolect'' as a translation of \textit{fargyan}.
+
+Despite the vast differences between topolects, the writing system was largely uniform throughout China, and has also been used in international correspondence between various countries of the Sinitic cultural circle, particularly in Japan, Korea, and Vietnam.
+In Chinese, this written variety is commonly referred to as \textit{wenyanwen} (文言文 \textit{wényánwén}), and in English as ``classical Chinese'' or ``literary Chinese.''
+The language had undergone very little change between Han dynasty (漢朝 \pinyin{Hàncháo}) and the 20th century, effectively preserving a substantial part of cultural references, vocabulary, and idiomatic expressions.
+% A corpus of ancient text and Confucian classics written in this language has for many centuries formed the basis of a system of formal education and imperial examinations for civil servants, which had not been abolished until as late as 1905.
+Many idiomatic expressions originating from classical texts, the so-called \textit{chengyu} (成語 \pinyin{chéngyǔ}), are commonly used to precisely convey emotions and moral concepts, or as set phrases in formal correspondence.
+The knowledge of various \textit{chengyu} is considered to be an indicator of one's erudition, and the use of these expressions is an important differentiating factor between colloquial Chinese and its written counterpart.
+
+Zhong Xianmin, who translated the novel \textit{Marta} did so based only on the Esperanto edition, without any knowledge of the Polish language.
+Due to these specifics of written Chinese, certain differences are to be expected between the Chinese translation and the Polish original.
+Should the Esperanto translation prove to be a faithful rendition of the Polish original, it follows that any differences 
 
 \section{Historical background of the novel}
 
