Brush up on the literature overview

--- a/introduction.tex
+++ b/introduction.tex
@@ -6,15 +6,20 @@ The purpose of this thesis is to discuss the 1873 novel \textit{Marta}, written 
 The goal of the research is to find the similarities and differences between all three versions, analyze the translation techniques used by the two translators.
 Through this process, it should be possible to determine whether any content has been distorted in the process of indirect translation from Esperanto into Chinese, and conversely, if Esperanto can reliably be used as an intermediate language.
 
-The novel \textit{Marta} was first published in Polish in 1873, in Esperanto in 1910, and in Traditional Chinese in 1948.
-Ludwik Zamenhof, the creator of Esperanto, being fluent in Polish, translated the novel from the Polish original.
+Being himself a proponent of the Esperanto movement, the author hopes to prove the usefulness of Esperanto in the field of translation, and by extension, to promote the study and use of this language.
+
+\section{Overview of literature and references}
+In the thesis, three editions of the novel \textit{Marta} are discussed, in three different languages: Polish, Esperanto, and Traditional Chinese.
+The novel was first published in Polish in 1873, in Esperanto in 1910, and in Traditional Chinese in 1948.
+Ludwik Zamenhof, the creator of Esperanto, % being fluent in Polish,
+translated the novel from the Polish original.
 The Chinese version was translated in May 1928 by Mr. Zhong Xianmin (錘憲民 \nazwisko{Zhōng Xiànmín}%
 \footnote{All Chinese terms mentioned in this thesis are listed in Traditional Chinese characters, together with the \textit{Hanyu Pinyin} romanization (漢語拼音 \pinyin{Hànyǔ Pīnyīn}) with tone marks. The romanizations of common terms are set in italic type, while proper names are set in regular font.}) %
-from the Esperanto edition.
-His translation was first published in 1930 by the Shanghai Beixin Shuju publishing house (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú})
+from Zamenhof's Esperanto translation.
+Zhong Xianmin's translation was first published in 1930 by the Shanghai Beixin Shuju publishing house (上海北新書局 \nazwisko{Shànghǎi Běixīn Shūjú})
 (Kökény and Bleier 1933: 612; Orzeszko 1948).
 
-Being himself a proponent of the Esperanto movement, the author hopes to prove the usefulness of Zamenhof's constructed language in the field of translation, and by extension promote the study and use of the language.
+None of the 
 
 \section{Research method and expected outcome}
 A comparative analysis of a single text translated into both Esperanto and through Esperanto into Chinese could determine whether Esperanto can reliably be used as an intermediate language for the translation of literary texts.
@@ -41,7 +46,7 @@ The knowledge of various \textit{chengyu} is considered to be an indicator of on
 
 Zhong Xianmin, who translated the novel \textit{Marta} did so based only on the Esperanto edition, without any knowledge of the Polish language.
 Due to these specifics of written Chinese, certain differences are to be expected between the Chinese translation and the Polish original.
-Should the Esperanto translation prove to be a faithful rendition of the Polish original, it follows that any differences 
+Should the Esperanto translation prove to be a faithful rendition of the Polish original, it follows that any substantial differences between the texts have been introduced in Zhong Xianmin's work.
 
 \section{Historical background of the novel}
 
